--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,22 +1,6 @@
 <h3>Users Index</h3>
 
 <% @users.each do |user| %>
-  <label>First Name: </label><br>
-  <%= user.first_name %><br><br>
-
-  <label>Last Name: </label><br>
-  <%= user.last_name %><br><br>
-
-  <label>Username: </label><br>
-  <%= user.username %><br><br>
-
-  <!-- <label>Password Digest: </label><br>
-  <%= user.password_digest %><br><br> -->
-
-  <label>Email: </label><br>
-  <%= user.email %><br><br>
-
-  <label>Phone Number: </label><br>
-  <%= user.phone_number %><br><br>
-
+  <br>
+  <%= link_to user.first_name, user_path(user) %><br><br>
 <% end %>
