--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
   <%= f.text_field :username %><br>
 
   <%= f.label :password_digest %><br>
-  <%= f.text_field :password_digest %><br>
+  <%= f.password_field :password_digest %><br>
 
   <%= f.label :email %><br>
   <%= f.text_field :email %><br>
@@ -19,5 +19,5 @@
   <%= f.label :phone_number %><br>
   <%= f.text_field :phone_number %><br>
 
-  <% f.submit %>
+  <%= f.submit %>
 <% end %>
