1st day 4th commit (cleanup, add small stuff)

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,6 +1,12 @@
-<h3>Comment Index</h3>
+<h2>Comments Index</h2>
 
 <% @comments.each do |comment| %>
-  <strong><label>Content: </label></strong><br>
-  <%= comment.content %><br><br>
+  <strong><label>User: </label></strong><br>
+  <%= link_to comment.user.name, comment_path(comment) %><br>
+  <ul>
+    <li>
+      <strong><label>Content: </label></strong><br>
+      <%= comment.content %><br><br>
+    </li>
+  </ul>
 <% end %>
