--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,8 +1,8 @@
-<h3>User Home</h3>
+<h2>User Home</h2>
 
-#welcome
-#log in
-
-
+<h3>Welcome to Restful Restaurants!</h3>
+Please log in or sign up.
+<br><br>
+#log in 
 <br>
 <%= link_to "Sign up", new_user_path %>
