--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,23 +1,37 @@
-<h3>Restaurant New</h3>
+<h2>New Restaurant</h2>
 
 <%= form_for @restaurant do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <% if @restaurant.errors.any? %>
+      <div id="error_explanation">
+        <h2>
+          <%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:
+        </h2>
 
-  <%= f.label :address %>
-  <%= f.text_field :address %>
+        <ul>
+        <% @restaurant.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+    
+  <strong><%= f.label :name, "Name:" %></strong><br>
+  <%= f.text_field :name %><br>
 
-  <%= f.label :rating %>
-  <%= f.text_field :rating %>
+  <strong><%= f.label :address, "Address:" %></strong><br>
+  <%= f.text_field :address %><br>
 
-  <%= f.label :img_url %>
-  <%= f.text_field :img_url %>
+  <strong><%= f.label :rating, "Rating:" %></strong><br>
+  <%= f.text_field :rating %><br>
 
-  <%= f.label :longitude %>
-  <%= f.text_field :longitude %>
+  <strong><%= f.label :img_url, "Image Url:" %></strong><br>
+  <%= f.text_field :img_url %><br>
 
-  <%= f.label :latitude %>
-  <%= f.text_field :latitude %>
+  <strong><%= f.label :longitude, "Longitude:" %></strong><br>
+  <%= f.text_field :longitude %><br>
+
+  <strong><%= f.label :latitude, "Latitude:" %></strong><br>
+  <%= f.text_field :latitude %><br><br>
 
   <%= f.submit %>
 <% end %>
