--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,33 +1,38 @@
-<h3>Restaurant Show</h3>
+<h2>Restaurant Show</h2>
 
-<label>Name: </label><br>
+<label><strong>Name: </strong></label><br>
 <%= @restaurant.name %><br><br>
-<label>Address: </label><br>
+
+<label><strong>Address: </strong></label><br>
 <%= @restaurant.address %><br><br>
-<label>Rating: </label><br>
+
+<label><strong>Rating: </strong></label><br>
 <%= @restaurant.rating %><br><br>
-<label>Img Url: </label><br>
+
+<label><strong>Img Url: </strong></label><br>
 <%= @restaurant.img_url %><br><br>
-<label>Longitude: </label><br>
+
+<label><strong>Longitude: </strong></label><br>
 <%= @restaurant.longitude %><br><br>
-<label>Latitude: </label><br>
+
+<label><strong>Latitude: </strong></label><br>
 <%= @restaurant.latitude %><br><br>
-<label>Comments: </label>
+
+<label><strong>Comments: </strong></label>
 <% @restaurant.comments.each do |comment| %>
 <%= comment.content %><br>
-<% end %>
+<% end %><br><br><br>
+
 
 
 <h3>New Comment</h3>
 
 <%= form_for @comment do |f| %>
+  <%= f.hidden_field :restaurant_id, :value => @restaurant.id %>
+  <%= f.label :user, "Select User:" %><br>
+  <%= f.collection_select :user_id, User.all, :id, :username %><br><br>
   <%= f.label :content, "Content:" %><br>
-  <%= f.text_field :content %><br><br>
-  <label>Select User: </label><br>
-  <%= f.collection_select :user_id, User.all, :id, :username %><br>
-<%= f.hidden_field :restaurant_id, :value => @restaurant.id %>
- <br><br>
+  <%= f.text_area :content %><br><br>
 
-<br>
   <%= f.submit %>
 <% end %>
