--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,23 +1,34 @@
-<h3>Edit User</h3>
+<h2>Edit User</h2>
 
 <%= form_for @user do |f| %>
-  <%= f.label :first_name %><br>
+  <% if @user.errors.any? %>
+      <div id="error_explanation">
+        <h2>
+          <%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:
+        </h2>
+
+        <ul>
+        <% @user.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+  <%= f.label :first_name, "First Name:" %><br>
   <%= f.text_field :first_name %><br>
 
-  <%= f.label :last_name %><br>
+  <%= f.label :last_name, "Last Name:" %><br>
   <%= f.text_field :last_name %><br>
 
-  <%= f.label :username %><br>
+  <%= f.label :username, "Username:" %><br>
   <%= f.text_field :username %><br>
 
-  <!-- <%= f.label :password_digest %><br>
-  <%= f.text_field :password_digest %><br> -->
-
-  <%= f.label :email %><br>
+  <%= f.label :email, "Email:" %><br>
   <%= f.text_field :email %><br>
 
-  <%= f.label :phone_number %><br>
-  <%= f.text_field :phone_number %><br>
+  <%= f.label :phone_number, "Phone Number:" %><br>
+  <%= f.text_field :phone_number %><br><br>
 
   <%= f.submit %>
 <% end %>
