--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,16 @@
-<h3>User Show</h3>
+<h2>User Show</h2>
 
-<label>First Name: </label><br>
-<%= @user.first_name %><br><br>
-
-<label>Last Name: </label><br>
-<%= @user.last_name %><br><br>
-
-<label>Username: </label><br>
+<label><strong>Username: </strong></label><br>
 <%= @user.username %><br><br>
 
-<!-- <label>Password Digest: </label><br>
-<%= @user.password_digest %><br><br> -->
+<label><strong>First Name: </strong></label><br>
+<%= @user.first_name %><br><br>
 
-<label>Email: </label><br>
+<label><strong>Last Name: </strong></label><br>
+<%= @user.last_name %><br><br>
+
+<label><strong>Email: </strong></label><br>
 <%= @user.email %><br><br>
 
-<label>Phone Number: </label><br>
+<label><strong>Phone Number: </strong></label><br>
 <%= @user.phone_number %><br><br>
