--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -24,8 +24,8 @@
   <%= f.label :username, "Username:" %><br>
   <%= f.text_field :username %><br>
 
-  <%= f.label :password_digest, "Password:" %><br>
-  <%= f.password_field :password_digest %><br>
+  <%= f.label :password %><br>
+  <%= f.password_field :password %><br>
 
   <%= f.label :email, "Email:" %><br>
   <%= f.text_field :email %><br>
