--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -3,6 +3,6 @@
 <h3>Welcome to Restful Restaurants!</h3>
 Please log in or sign up.
 <br><br>
-#log in 
+<%= link_to "Log In", login_path %> 
 <br>
 <%= link_to "Sign up", new_user_path %>
