--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,11 @@
 
       Logged in As: <%= current_user.first_name %>
       <%= button_to "LOG OUT", logout_path, :method => :get %>
+      <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd7zU3y8whcTYCmwqFY7a2QZ0EwTT2PwTnVyew0WNVNCf2z_kr" height = 200 px, length = 200 px>
+
       <br>
-      <br>
-      View Profile:<%= button_to "MY PROFILE", user_path(current_user),:method => :get    %>
+      Quick Navigation:<%= button_to "MY PROFILE", user_path(current_user),:method => :get    %>
+      <%= button_to "ALL RESTaurants", restaurants_path, :method => :get %>
 
     </header>
 
