--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,26 @@
-<h2>Users Index</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <header>
+      
+      <label>Logged In As: </label> <%= button_to @user.name.upcase, user_path(@user),:method => :get%>
+      <%= button_to "LOG OUT", logout_path, :method => :post%>
+      <%= button_to "ALL RESTaurants", restaurants_path, :method => :get%>
+      </h5>
+    </div>
+    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd7zU3y8whcTYCmwqFY7a2QZ0EwTT2PwTnVyew0WNVNCf2z_kr" height = 200 px, length = 200 px>
 
-<ul>
-  <% @users.each do |user| %>
-    <li>
-      <%= link_to user.first_name, user_path(user) %><br><br>
-    </li>
-  <% end %>
-</ul>
+    </header>
+    <ul>
+      <% @users.each do |user| %>
+        <li>
+          <%= link_to user.first_name, user_path(user) %><br><br>
+        </li>
+      <% end %>
+    </ul>
+  </body>
+</html><h2>Users Index</h2>
