--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,37 +1,47 @@
-<h2>New User</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <header>
 
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-      <div id="error_explanation">
-        <h2>
-          <%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:
-        </h2>
+    </header>
+    <%= form_for @user do |f| %>
+      <% if @user.errors.any? %>
+          <div id="error_explanation">
+            <h2>
+              <%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:
+            </h2>
 
-        <ul>
-        <% @user.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
+            <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
         <% end %>
-        </ul>
-      </div>
+
+      <%= f.label :first_name, "First Name:"%><br>
+      <%= f.text_field :first_name %><br>
+
+      <%= f.label :last_name, "Last Name:" %><br>
+      <%= f.text_field :last_name %><br>
+
+      <%= f.label :username, "Username:" %><br>
+      <%= f.text_field :username %><br>
+
+      <%= f.label :password %><br>
+      <%= f.password_field :password %><br>
+
+      <%= f.label :email, "Email:" %><br>
+      <%= f.text_field :email %><br>
+
+      <%= f.label :phone_number, "Phone Number:" %><br>
+      <%= f.text_field :phone_number %><br><br>
+
+      <%= f.submit %>
     <% end %>
-
-  <%= f.label :first_name, "First Name:"%><br>
-  <%= f.text_field :first_name %><br>
-
-  <%= f.label :last_name, "Last Name:" %><br>
-  <%= f.text_field :last_name %><br>
-
-  <%= f.label :username, "Username:" %><br>
-  <%= f.text_field :username %><br>
-
-  <%= f.label :password %><br>
-  <%= f.password_field :password %><br>
-
-  <%= f.label :email, "Email:" %><br>
-  <%= f.text_field :email %><br>
-
-  <%= f.label :phone_number, "Phone Number:" %><br>
-  <%= f.text_field :phone_number %><br><br>
-
-  <%= f.submit %>
-<% end %>
+  </body>
+</html>
