--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,38 @@
-<h2>User Show</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <header>
+      <label>Logged In As: </label> <%= button_to @user.name.upcase, user_path(@user),:method => :get%>
+      <%= button_to "LOG OUT", logout_path, :method => :post%>
+      <%= button_to "ALL RESTaurants", restaurants_path, :method => :get%>
+      </h5>
+    </div>
+    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd7zU3y8whcTYCmwqFY7a2QZ0EwTT2PwTnVyew0WNVNCf2z_kr" height = 200 px, length = 200 px>
 
-<label><strong>Username: </strong></label><%= @user.username %><br><br>
 
-<label><strong>First Name: </strong></label><%= @user.first_name %><br><br>
+    </header>
+    <h2>User Show</h2>
 
-<label><strong>Last Name: </strong></label><%= @user.last_name %><br><br>
+    <label><strong>Username: </strong></label><%= @user.username %><br><br>
 
-<label><strong>Email: </strong></label><%= @user.email %><br><br>
+    <label><strong>First Name: </strong></label><%= @user.first_name %><br><br>
 
-<label><strong>Phone Number: </strong></label><%= @user.phone_number %><br><br>
+    <label><strong>Last Name: </strong></label><%= @user.last_name %><br><br>
+
+    <label><strong>Email: </strong></label><%= @user.email %><br><br>
+
+    <label><strong>Phone Number: </strong></label><%= @user.phone_number %><br><br>
 
 
-<h3>Here are <%= @user.first_name %>'s favorite restaurants: </h3>
-<% @user.favorites.each do |fav| %>
-<br>
-<%= link_to Restaurant.find(fav.restaurant_id).name, restaurant_path(fav.restaurant_id)%>
-<%end %>
+    <h3>Here are <%= @user.first_name %>'s favorite restaurants: </h3>
+    <% @user.favorites.each do |fav| %>
+    <br>
+    <%= link_to Restaurant.find(fav.restaurant_id).name, restaurant_path(fav.restaurant_id)%>
+    <%end %>
+
+  </body>
+</html>
