--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,48 +7,41 @@
   <body>
     <header>
 
-      <label>Logged In As: </label> <%= button_to @user.name.upcase, user_path(@user),:method => :get%>
-      <%= button_to "LOG OUT", logout_path, :method => :post%>
-      <%= button_to "ALL RESTaurants", restaurants_path, :method => :get%>
-      </h5>
-    </div>
-    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd7zU3y8whcTYCmwqFY7a2QZ0EwTT2PwTnVyew0WNVNCf2z_kr" height = 200 px, length = 200 px>
-
+      <div class="right-align">
+        <a class="waves-effect waves-light btn"><%= button_to "Search", "/", :method => :get%></a>
+        <a class="waves-effect waves-light btn"><%= button_to @user.name.upcase, user_path(@user),:method => :get%></a>
+        <a class="waves-effect waves-light btn"><%= button_to "LOG OUT", logout_path, :method => :post%></a>
+      </div>
 
     </header>
-    <h2>Restaurant Index</h2>
 
-    <strong>Search Bar</strong>
+    <div align = "center">
 
-    <%= form_tag restaurants_path, method: 'post' do %>
-      <br>
-      <%= label_tag :'search[term]', "Search Term" %><br>
-      <%= text_field_tag :'search[term]' %><br>
-      <%= label_tag :'search[location]', "Search Location" %><br>
-      <%= text_field_tag :'search[location]' %><br><br>
+      <h1>Restaurant List</h1><br>
 
-      <%= submit_tag %>
-    <% end %>
+      <% @restaurants.each do |restaurant| %>
+        <ul>
+          <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
+        <ul>
 
-    <br>
+        <img src = "<%= restaurant.image_url%>" height = 350 px, length = 350 px><br>
 
-    <% @restaurants.each do |restaurant| %>
-      <ul>
-      <label><strong>Name: </strong></label><br>
-      <%= link_to restaurant.name, restaurant_path(restaurant) %><br><br>
-      <ul>
+        <h4>Address: </h4>
+        <h5><%= restaurant.address %></h5><br>
 
-      <img src = "<%= restaurant.image_url%>" height = 200 px, length = 200 px><br>
+        <h4>Rating: </h4>
+        <div class="star">
+          <% restaurant.rating.round.times do %>
+            <%= p "★" %>
+          <% end %>
+        </div>
 
-      <label><strong>Address: </strong></label><br>
-      <%= restaurant.address %><br><br>
+        <br><br>
 
-      <label><strong>Rating: </strong></label><br>
-      <%= restaurant.rating %><br><br>
-
-      </ul>
-      </ul>
-    <% end %>
+        </ul>
+        </ul>
+      <% end %>
+    </div>
 
   </body>
 </html>
