--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,21 +6,25 @@
   </head>
   <body>
     <header>
-      
-      <label>Logged In As: </label> <%= button_to @user.name.upcase, user_path(@user),:method => :get%>
-      <%= button_to "LOG OUT", logout_path, :method => :post%>
-      <%= button_to "ALL RESTaurants", restaurants_path, :method => :get%>
-      </h5>
-    </div>
-    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRd7zU3y8whcTYCmwqFY7a2QZ0EwTT2PwTnVyew0WNVNCf2z_kr" height = 200 px, length = 200 px>
+
+      <div class="right-align">
+        <a class="waves-effect waves-light btn"><%= button_to "Search", "/", :method => :get%></a>
+        <a class="waves-effect waves-light btn"><%= button_to @user.name.upcase, user_path(@user),:method => :get%></a>
+        <a class="waves-effect waves-light btn"><%= button_to "LOG OUT", logout_path, :method => :post%></a>
+      </div>
 
     </header>
-    <ul>
+
+    <div class="center">
+
+    <h1><u>All Users</u></h1><br>
+
       <% @users.each do |user| %>
-        <li>
-          <%= link_to user.first_name, user_path(user) %><br><br>
-        </li>
+        <ul>
+          <h3><%= link_to user.first_name, user_path(user) %><br></h3>
+        </ul>
       <% end %>
-    </ul>
+    </div>
+
   </body>
-</html><h2>Users Index</h2>
+</html>
