--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -33,7 +33,10 @@
       <%= f.text_field :username %><br>
 
       <%= f.label :password %><br>
-      <%= f.password_field :password %><br>
+      <%= f.password_field :password%><br>
+
+      <%= f.label :confirm_password %><br>
+      <%= f.password_field :confirm_password %><br>
 
       <%= f.label :email, "Email:" %><br>
       <%= f.text_field :email %><br>
@@ -45,3 +48,45 @@
     <% end %>
   </body>
 </html>
+
+<div class="row">
+    <form class="col s12">
+      <div class="row">
+        <div class="input-field col s6">
+          <input placeholder="Enter First Name" id="first_name" type="text" class="validate">
+          <label for="first_name">First Name</label>
+        </div>
+        <div class="input-field col s6">
+          <input id="last_name" type="text" class="validate">
+          <label for="last_name">Last Name</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input  id="disabled" type="text" class="validate">
+          <label for="disabled">Disabled</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="password" type="password" class="validate">
+          <label for="password">Password</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="input-field col s12">
+          <input id="email" type="email" class="validate">
+          <label for="email">Email</label>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12">
+          This is an inline input field:
+          <div class="input-field inline">
+            <input id="email" type="email" class="validate">
+            <label for="email" data-error="wrong" data-success="right">Email</label>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
