--- a/app/css/materialize.css
+++ b/app/css/materialize.css
@@ -9387,3 +9387,16 @@ button.picker__today:focus, button.picker__clear:focus, button.picker__close:foc
   stroke-linecap: round;
   /*shape-rendering: crispEdges;*/
 }
+
+.container-mid  {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
+.container-mid .row {
+  margin: 0 auto;
+}
