--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,23 +30,45 @@
           </div>
         <% end %>
 
-      <%= f.label :first_name, "First Name:" %><br>
-      <%= f.text_field :first_name %><br>
+        <div class="center">
 
-      <%= f.label :last_name, "Last Name:" %><br>
-      <%= f.text_field :last_name %><br>
+        <h1>Edit Information</h1>
 
-      <%= f.label :username, "Username:" %><br>
-      <%= f.text_field :username %><br>
+        <div class="input-field col6">
+          <i class="material-icons prefix">account_circle</i>
+          <%= f.text_field :first_name, style: 'width: 20%;', placeholder: "Enter First Name" %>
+        </div>
+        <div class="input-field col6">
+          <i class="material-icons prefix">account_circle</i>
+            <%= f.text_field :last_name, style: 'width: 20%;', placeholder: "Enter Last Name" %>
+        </div>
+        <div class="input-field col6">
+          <i class="material-icons prefix">account_box</i>
+          <%= f.text_field :username, style: 'width: 20%;', placeholder: "Enter Username" %>
+        </div>
+        <div class="input-field col6">
+          <i class="material-icons prefix">lock_outline</i>
+          <%= f.password_field :password, style: 'width: 20%;', placeholder: "Enter Password"%>
+        </div>
+        <div class="input-field col6">
+          <i class="material-icons prefix">lock_open</i>
+          <%= f.password_field :confirm_password, style: 'width: 20%;', placeholder: "Confirm Password" %>
+        </div>
+        <div class="input-field col6">
+          <i class="material-icons prefix">email</i>
+          <%= f.text_field :email, style: 'width: 20%;', placeholder: "Enter Email" %>
+        </div>
+        <div class="input-field col6">
+          <i class="material-icons prefix">local_phone</i>
+          <%= f.text_field :phone_number, style: 'width: 20%;', placeholder: "Enter Phone Number" %><br>
+        </div>
 
-      <%= f.label :email, "Email:" %><br>
-      <%= f.text_field :email %><br>
+        <button class="btn waves-effect waves-light" type="submit" name="action"><%= f.submit %>
+          <i class="material-icons right">send</i>
+        </button>
 
-      <%= f.label :phone_number, "Phone Number:" %><br>
-      <%= f.text_field :phone_number %><br><br>
+      </div><br>
 
-      <%= f.submit %>
     <% end %>
   </body>
 </html>
-<h2>Edit User</h2>
