--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -4,15 +4,31 @@
   <a class="waves-effect waves-light btn"><%= button_to "LOG OUT", logout_path, :method => :post%></a>
 </div>
 
+<div class="containter-mid">
 <p>Hi, <%= @user.name %>! <br>
 Welcome to RESTful Restaurants!</p>
 
+<div class="center">
+
+<div class="row">
+  <div class="col l4 push-l4">
+
 <%= form_tag 'restaurants/results', method: 'post' do %>
   <br>
-  <%= label_tag :'search[term]', "Search Term" %><br>
-  <%= text_field_tag :'search[term]' %><br>
-  <%= label_tag :'search[location]', "Search Location" %><br>
-  <%= text_field_tag :'search[location]' %><br><br>
-
-  <%= submit_tag %>
+  <div class="input-field col6">
+    <i class="material-icons prefix">youtube_searched_for</i>
+    <%= text_field_tag :'search[term]', nil, placeholder: "SEARCH TERM" %>
+  </div>
+  <div class="input-field col6">
+    <i class="material-icons prefix">youtube_searched_for</i>
+    <%= text_field_tag :'search[location]', nil, placeholder: "SEARCH LOCATION" %>
+  </div>
+  <button class="btn waves-effect waves-light" type="submit" name="action"><%= submit_tag "Search" %>
+    <i class="material-icons right">send</i>
+  </button>
 <% end %>
+
+</div>
+</div>
+</div>
+</div>
